fix(navbar): make navbar visible in light mode
Closes #10

--- a/app/src/app/globals.css
+++ b/app/src/app/globals.css
@@ -11,9 +11,14 @@
   .flex-center {
     @apply flex items-center justify-center;
   }
-
+  .flex-between {
+    @apply flex items-center justify-between;
+  }
   .boundary {
     @apply container mx-auto px-2 lg:px-4;
+  }
+  .wall {
+    @apply max-w-5xl mx-auto;
   }
   .p {
     @apply text-sm  leading-loose;
@@ -30,6 +35,7 @@
     --radial-bg: radial-gradient(circle at 50% 50%, hsl(0, 0%, 99%) 10%, hsl(0, 0%, 96%) 100%);
     --navbar-bg: 252 252% 252%;
     --footer-bg: 255 255% 255%;
+    --brand: 34, 100%, 64%;
     --card: 0 0% 100%;
     --card-foreground: 0 0% 3.9%;
     --popover: 0 0% 100%;
@@ -60,6 +66,7 @@
     --radial-bg: radial-gradient(circle at 50% 50%, hsl(221, 63%, 6%) 10%, hsl(221, 100%, 3%) 100%);
     --navbar-bg: 0 0% 10%;
     --footer-bg: 0 0% 1%;
+    --brand: 48, 96%, 53%;
     --card: 0 0% 3.9%;
     --card-foreground: 0 0% 98%;
     --popover: 0 0% 3.9%;
